--- a/less/index.less
+++ b/less/index.less
@@ -31,7 +31,6 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background-color:blue;
 }
 ol, ul {
 	list-style: none;
@@ -55,6 +54,7 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	/*background-color: red; changed this to red as per instructions and then quickly changed it back. Ow, my eyes!*/
 }
 
