--- a/css/index.css
+++ b/css/index.css
@@ -135,3 +135,249 @@ body {
   height: 100%;
   /*background-color: red; changed this to red as per instructions and then quickly changed it back. Ow, my eyes!*/
 }
+/*VARIABLES*/
+/* Mobile: Using @phone mixin to work for mobile */
+/*COLORS: here are the colors*/
+/*Font-Stacks:*/
+/*Mixins*/
+html {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 62.5%;
+}
+.container {
+  max-width: 1024px;
+  width: 100%;
+  margin: 0px auto;
+  font-size: 1.6rem;
+  padding: 0 2%;
+  /*CSS for the top section with an image*/
+}
+.container header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .container header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.container header nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 46%;
+}
+@media (max-width: 500px) {
+  .container header nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+  }
+}
+.container header nav a {
+  width: 30%;
+  margin: 5% 2%;
+  text-align: center;
+  text-decoration: none;
+}
+@media (max-width: 500px) {
+  .container header nav a {
+    width: 100%;
+    border: 2px solid gray;
+    background-color: pink;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    font-size: 1.8rem;
+    margin: 0px;
+    border-collapse: collapse;
+  }
+}
+.container .top-section {
+  width: 100%;
+  background-color: lightgray;
+  padding-top: 4%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-bottom: 4%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 3%;
+}
+@media (max-width: 500px) {
+  .container .top-section {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+.container .top-section .sherlock_blurb {
+  width: 60%;
+  margin-top: 2%;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+@media (max-width: 500px) {
+  .container .top-section .sherlock_blurb {
+    width: 100%;
+  }
+}
+.container .top-section .sherlock_blurb h1 {
+  font-size: 5rem;
+  text-align: center;
+  margin: 3%;
+  text-decoration: underline;
+  color: darkred;
+}
+@media (max-width: 500px) {
+  .container .top-section .sherlock_blurb h1 {
+    margin: 5% auto;
+    font-size: 4rem;
+  }
+}
+.container .top-section .sherlock_blurb h2 {
+  color: darkred;
+  text-align: center;
+}
+.container .top-section .sherlock_blurb p {
+  font-size: 1.6rem;
+  margin: 4% auto;
+}
+@media (max-width: 500px) {
+  .container .top-section .sherlock_blurb p {
+    font-size: 1.4rem;
+    margin: 4% auto;
+  }
+}
+.container .top-section .sherlock_blurb button {
+  width: 50%;
+  margin: 10% auto;
+  padding: 5%;
+  text-align: center;
+  font-size: 2rem;
+}
+.container .top-section img {
+  margin: 5%;
+}
+@media (max-width: 500px) {
+  .container .top-section img {
+    display: none;
+  }
+}
+.container .mid-section {
+  width: 100%;
+  margin: 2% auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-bottom: 1px solid gray;
+}
+@media (max-width: 500px) {
+  .container .mid-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+.container .mid-section div {
+  margin: 3% 0;
+  width: 44%;
+}
+.container .mid-section div h2 {
+  color: darkred;
+  text-align: left;
+  font-size: 2rem;
+  width: 100%;
+  margin-bottom: 4%;
+}
+.container .mid-section div p {
+  line-height: 1.5;
+}
+@media (max-width: 500px) {
+  .container .mid-section div {
+    width: 100%;
+    padding: 5%;
+  }
+}
+.container .mid-section div ul {
+  width: 100%;
+}
+.container .mid-section div ul li {
+  margin: 0%;
+  border: 0.5px solid black;
+  padding: 4%;
+  border-collapse: collapse;
+}
+.container .work-history {
+  margin: 3% 0;
+  width: 100%;
+  border-bottom: 1px solid gray;
+}
+.container .work-history h2 {
+  color: darkred;
+  font-size: 2rem;
+  width: 100%;
+  margin-bottom: 4%;
+}
+.container .work-history table {
+  width: 100%;
+  margin: 3% 0;
+  font-size: 1.5rem;
+}
+.container .work-history table thead {
+  color: darkred;
+  text-align: left;
+}
+.container .work-history table tbody {
+  text-align: left;
+  padding: 2%;
+}
+.container .contact {
+  margin: 3% 0;
+}
+.container .contact h2 {
+  color: darkred;
+  font-size: 2rem;
+  width: 100%;
+  margin-bottom: 2%;
+}
+@media (max-width: 500px) {
+  .container .contact h2 {
+    maring-bottom: 4%;
+  }
+}
+.container .contact address {
+  line-height: 1.5;
+  width: 45%;
+}
+@media (max-width: 500px) {
+  .container .contact address {
+    font-size: 1.8rem;
+    width: 100%;
+  }
+}
+.container footer {
+  background-color: gray;
+  width: 100%;
+  margin-top: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 2%;
+}
+.container footer p {
+  text-align: center;
+  margin: 3%;
+  color: white;
+  font-size: 1.5rem;
+}
