--- a/less/index.less
+++ b/less/index.less
@@ -58,3 +58,261 @@ html, body {
 	/*background-color: red; changed this to red as per instructions and then quickly changed it back. Ow, my eyes!*/
 }
 
+/*VARIABLES*/
+
+/* Mobile: Using @phone mixin to work for mobile */
+@phone:500px;
+
+/*COLORS: here are the colors*/
+@footer-section-color:gray;
+@top-background-color:lightgray;
+@h1-name:darkred;
+
+/*Font-Stacks:*/
+@font-stack: 'Libre Baskerville', serif;
+@font-size:62.5%;
+
+/*Mixins*/
+.flex-for-mobile(){
+	display:flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items:center;
+}
+
+.flex-for-regular(){
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items:flex-start;
+}
+
+
+
+html{
+	font-family:@font-stack;
+	font-size:@font-size;
+}
+
+.container{
+	max-width:1024px;
+	width:100%;
+	margin:0px auto;
+	font-size:1.6rem;
+	padding:0 2%;
+	header{
+		display:flex;
+		flex-direction:row;
+		justify-content:flex-end;
+		width:100%;
+		@media(max-width:@phone){
+			display:flex;
+			flex-direction:column;
+			align-items:center;
+		}
+		nav{
+			display:flex;
+			flex-direction:row;
+			justify-content:space-between;
+			width:46%;
+			@media(max-width:@phone){
+				display:flex;
+				flex-direction:column;
+				justify-content:flex-start;
+				width:100%;
+			}
+			a{
+				width:30%;
+				margin:5% 2%;
+				text-align:center;
+				text-decoration:none;
+				@media(max-width:@phone){
+					width:100%;
+					border:2px solid gray;
+					background-color:pink;
+					padding-top:3%;
+					padding-bottom:3%;
+					font-size:1.8rem;
+					margin:0px;
+					border-collapse: collapse;
+				}
+			}
+		}
+	}
+
+	/*CSS for the top section with an image*/
+	.top-section{
+		width:100%;
+		background-color:@top-background-color;
+		padding-top:4%;
+		padding-left:3%;
+		padding-right:3%;
+		padding-bottom:4%;
+		display:flex;
+		flex-direction:row;
+		justify-content:space-between;
+		align-items:flex-start;
+		margin-bottom:3%;
+		@media(max-width:@phone){
+			flex-direction:column;
+			justify-content:flex-start;
+			align-items:center;
+		}
+		.sherlock_blurb{
+			width:60%;
+			margin-top:2%;
+			padding:2%;
+			display:flex;
+			flex-direction:column;
+			justify-content:flex-start;
+			@media(max-width:@phone){
+				width:100%;
+			}
+			h1{
+				font-size:5.0rem;
+				text-align:center;
+				margin:3%;
+				text-decoration:underline;
+				color: @h1-name;
+				@media(max-width:@phone){
+					margin:5% auto;
+					font-size:4.0rem;
+				}
+			}
+			h2{
+				color:@h1-name;
+				text-align:center;
+			}
+			p{
+				font-size:1.6rem;
+				margin:4% auto;
+				@media(max-width:@phone){
+					font-size:1.4rem;
+					margin:4% auto;
+				}
+			}
+
+			button{
+				width:50%;
+				margin: 10% auto;
+				padding:5%;
+				text-align:center;
+				font-size:2.0rem;
+			}
+		}
+		img{
+			margin:5%;
+			@media(max-width:@phone){
+				display:none;
+			}
+		}
+	}
+
+	.mid-section{
+		width:100%;
+		margin: 2% auto;
+		.flex-for-regular();
+		border-bottom:1px solid gray;
+		@media(max-width:@phone){
+			.flex-for-mobile();
+		}
+		div{
+			margin:3% 0;
+			width:44%;
+			h2{
+				color:@h1-name;
+				text-align:left;
+				font-size:2.0rem;
+				width:100%;
+				margin-bottom:4%;
+			}
+			p{
+				line-height: 1.5;
+			}
+			@media (max-width:@phone){
+				width:100%;
+				padding: 5%;
+			}
+			ul{
+				width:100%;
+				
+				li{
+					margin:0%;
+					border:0.5px solid black;
+					padding:4%;
+					border-collapse: collapse;
+				}
+			}
+		}
+	}
+
+	.work-history{
+		margin:3% 0;
+		width:100%;
+		border-bottom:1px solid gray;
+
+		h2{
+			color:@h1-name;
+			font-size:2.0rem;
+			width:100%;
+			margin-bottom:4%;
+		}
+
+		table{
+			width:100%;
+			margin:3% 0;
+			font-size:1.5rem;
+			thead{
+				color:@h1-name;
+				text-align:left;
+			}
+			tbody{
+				text-align:left;
+				padding:2%;
+			}
+			
+		}
+
+
+	}
+
+	.contact{
+		margin: 3% 0;
+		h2{
+			color:@h1-name;
+			font-size:2.0rem;
+			width:100%;
+			margin-bottom:2%;
+			@media(max-width:@phone){
+				maring-bottom:4%;
+			}
+		}
+		address{
+			line-height:1.5;
+			width:45%;
+			@media(max-width:@phone)
+			{	
+				font-size:1.8rem;
+				width:100%;
+			}
+		}
+
+	}
+
+	footer{
+		background-color:@footer-section-color;
+		width:100%;
+		margin-top:3%;
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		padding-bottom:2%;
+		p{
+			text-align:center;
+			margin:3%;
+			color:white;
+			font-size:1.5rem;
+		}
+	}
+
+}
