--- a/less/index.less
+++ b/less/index.less
@@ -60,13 +60,15 @@ html, body {
 
 /*VARIABLES*/
 
-/* Mobile: Using @phone mixin to work for mobile */
-@phone:500px;
+/* Mobile: Using @phone variable to work for mobile */
+@phone:~"max-width:500px";
+@phone-photo:~"max-width:580px";
 
 /*COLORS: here are the colors*/
 @footer-section-color:gray;
-@top-background-color:lightgray;
-@h1-name:darkred;
+@top-background-color:#FEF9EB;
+@holmes-theme-color:darkred;
+@background-color:#FAEBD7;
 
 /*Font-Stacks:*/
 @font-stack: 'Libre Baskerville', serif;
@@ -92,6 +94,7 @@ html, body {
 html{
 	font-family:@font-stack;
 	font-size:@font-size;
+	background-color:@background-color;
 }
 
 .container{
@@ -100,12 +103,15 @@ html{
 	margin:0px auto;
 	font-size:1.6rem;
 	padding:0 2%;
+	@media(@phone){
+		padding:0;
+	}
 	header{
 		display:flex;
 		flex-direction:row;
 		justify-content:flex-end;
 		width:100%;
-		@media(max-width:@phone){
+		@media(@phone){
 			display:flex;
 			flex-direction:column;
 			align-items:center;
@@ -115,7 +121,7 @@ html{
 			flex-direction:row;
 			justify-content:space-between;
 			width:46%;
-			@media(max-width:@phone){
+			@media(@phone){
 				display:flex;
 				flex-direction:column;
 				justify-content:flex-start;
@@ -126,10 +132,11 @@ html{
 				margin:5% 2%;
 				text-align:center;
 				text-decoration:none;
-				@media(max-width:@phone){
+				color:@holmes-theme-color;
+				@media(@phone){
 					width:100%;
-					border:2px solid gray;
-					background-color:pink;
+					border:0.5px solid gray;
+			
 					padding-top:3%;
 					padding-bottom:3%;
 					font-size:1.8rem;
@@ -153,7 +160,7 @@ html{
 		justify-content:space-between;
 		align-items:flex-start;
 		margin-bottom:3%;
-		@media(max-width:@phone){
+		@media(@phone){
 			flex-direction:column;
 			justify-content:flex-start;
 			align-items:center;
@@ -165,7 +172,11 @@ html{
 			display:flex;
 			flex-direction:column;
 			justify-content:flex-start;
-			@media(max-width:@phone){
+			@media(@phone){
+				width:100%;
+			}
+
+			@media(@phone-photo){
 				width:100%;
 			}
 			h1{
@@ -173,23 +184,24 @@ html{
 				text-align:center;
 				margin:3%;
 				text-decoration:underline;
-				color: @h1-name;
-				@media(max-width:@phone){
+				color: @holmes-theme-color;
+				@media(@phone){
 					margin:5% auto;
 					font-size:4.0rem;
 				}
 			}
 			h2{
-				color:@h1-name;
+				color:@holmes-theme-color;
 				text-align:center;
 			}
 			p{
 				font-size:1.6rem;
 				margin:4% auto;
-				@media(max-width:@phone){
+				@media(@phone){
 					font-size:1.4rem;
 					margin:4% auto;
 				}
+			
 			}
 
 			button{
@@ -198,11 +210,20 @@ html{
 				padding:5%;
 				text-align:center;
 				font-size:2.0rem;
+				color:@holmes-theme-color;
+				background-color:@background-color;
+				border: 2px solid black;
+				border-radius:50px;
+			
 			}
 		}
 		img{
 			margin:5%;
-			@media(max-width:@phone){
+			border-radius:10px;
+			@media(@phone){
+				display:none;
+			}
+			@media(@phone-photo){
 				display:none;
 			}
 		}
@@ -212,15 +233,14 @@ html{
 		width:100%;
 		margin: 2% auto;
 		.flex-for-regular();
-		border-bottom:1px solid gray;
-		@media(max-width:@phone){
+		@media(@phone){
 			.flex-for-mobile();
 		}
 		div{
 			margin:3% 0;
 			width:44%;
 			h2{
-				color:@h1-name;
+				color:@holmes-theme-color;
 				text-align:left;
 				font-size:2.0rem;
 				width:100%;
@@ -229,7 +249,7 @@ html{
 			p{
 				line-height: 1.5;
 			}
-			@media (max-width:@phone){
+			@media (@phone){
 				width:100%;
 				padding: 5%;
 			}
@@ -247,29 +267,75 @@ html{
 	}
 
 	.work-history{
-		margin:3% 0;
+		margin:6% 0;
 		width:100%;
-		border-bottom:1px solid gray;
+		
 
 		h2{
-			color:@h1-name;
+			color:@holmes-theme-color;
 			font-size:2.0rem;
 			width:100%;
-			margin-bottom:4%;
+			margin-bottom:2%;
 		}
 
 		table{
 			width:100%;
 			margin:3% 0;
 			font-size:1.5rem;
+			border-collapse:separate;
+			
 			thead{
-				color:@h1-name;
+				color:@holmes-theme-color;
 				text-align:left;
+	
+				th{
+					&:nth-child(1){
+						width:10%;
+						padding-left:2%;
+					}
+					width:30%;
+					padding:2% 0;
+				}
+				
 			}
 			tbody{
 				text-align:left;
 				padding:2%;
+				tr{
+					&:nth-child(odd){
+						background-color:@top-background-color;
+					
+					}
+					td{
+						/*border:1px solid red;*/
+						
+						font-size:1.4rem;
+						padding:2% 0;
+						padding-right:1%;
+						width:30%;
+						&:first-child{
+							padding-left:2%;
+							width:10%;
+							font-size:1.6rem;
+							@media(@phone){
+								text-align:center;
+								font-size:1.4rem;
+								padding-left:0%;
+							}
+						}
+						@media(@phone){
+							font-size:1.4rem;
+							padding-top:3%;
+							padding-bottom:3%;
+							padding-right:1%;
+							
+						}
+		   
+						
+					   }
+				}
 			}
+		
 			
 		}
 
@@ -278,19 +344,22 @@ html{
 
 	.contact{
 		margin: 3% 0;
+		@media(@phone){
+			margin:11% 0;
+		}
 		h2{
-			color:@h1-name;
+			color:@holmes-theme-color;
 			font-size:2.0rem;
 			width:100%;
 			margin-bottom:2%;
-			@media(max-width:@phone){
-				maring-bottom:4%;
+			@media(@phone){
+				margin-bottom:4%;
 			}
 		}
 		address{
 			line-height:1.5;
 			width:45%;
-			@media(max-width:@phone)
+			@media(@phone)
 			{	
 				font-size:1.8rem;
 				width:100%;
@@ -302,11 +371,14 @@ html{
 	footer{
 		background-color:@footer-section-color;
 		width:100%;
-		margin-top:3%;
+		margin-top:4%;
 		display:flex;
 		flex-direction:column;
 		justify-content:center;
 		padding-bottom:2%;
+		@media(@phone){
+			margin-top:6%;
+		}
 		p{
 			text-align:center;
 			margin:3%;
